--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ redis = [
     "redis>=5.0",
 ]
 dev = [
+    "langchain-tests>=0.0.1",
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
     "pytest-asyncio>=0.21.0",
@@ -50,6 +51,16 @@ dev = [
     "ruff>=0.1.0",
     "mypy>=1.5.0",
     "types-pyyaml>=6.0",
+]
+test = [
+    "langchain-tests>=0.0.1",
+    "pytest>=7.4.0",
+    "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-socket>=0.7.0",
+]
+test_integration = [
+    "pytest-xdist>=3.0.0",
 ]
 
 [project.urls]
