--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "Apache-2.0"}
 authors = [
-    {name = "LangChain Iceberg Contributors"}
+    {name = "Vipin Kataria"}
 ]
 keywords = ["langchain", "iceberg", "data-lake", "sql", "ai", "llm"]
 classifiers = [
