--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,65 +1,91 @@
+version: '3.8'
+
 services:
-  # MinIO for S3-compatible storage
+  # PostgreSQL database for catalog metadata
+  postgres:
+    image: postgres:15
+    container_name: iceberg-postgres
+    environment:
+      POSTGRES_USER: iceberg
+      POSTGRES_PASSWORD: iceberg123
+      POSTGRES_DB: iceberg_catalog
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - iceberg-net
+
+  # MinIO for S3-compatible object storage
   minio:
-    image: minio/minio:latest
+    image: minio/minio
     container_name: iceberg-minio
+    environment:
+      MINIO_ROOT_USER: admin
+      MINIO_ROOT_PASSWORD: password
     ports:
       - "9000:9000"
       - "9001:9001"
-    environment:
-      - MINIO_ROOT_USER=admin
-      - MINIO_ROOT_PASSWORD=password
     command: server /data --console-address ":9001"
     volumes:
       - minio-data:/data
     networks:
-      - iceberg-network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
-      start_period: 40s
+      - iceberg-net
 
-  # REST Catalog Server for Iceberg
-  rest-catalog:
+  # Create MinIO bucket
+  minio-setup:
+    image: minio/mc
+    container_name: minio-setup
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      sleep 5;
+      /usr/bin/mc config host add minio http://minio:9000 admin password;
+      /usr/bin/mc mb minio/warehouse;
+      /usr/bin/mc policy set public minio/warehouse;
+      exit 0;
+      "
+    networks:
+      - iceberg-net
+
+  # Iceberg REST Catalog
+  iceberg-rest:
     image: tabulario/iceberg-rest:latest
     container_name: iceberg-rest-catalog
+    depends_on:
+      - postgres
+      - minio
+    environment:
+      # Catalog configuration
+      CATALOG_WAREHOUSE: s3://warehouse/
+      CATALOG_IO__IMPL: org.apache.iceberg.aws.s3.S3FileIO
+      CATALOG_S3_ENDPOINT: http://minio:9000
+      CATALOG_S3_ACCESS__KEY__ID: admin
+      CATALOG_S3_SECRET__ACCESS__KEY: password
+      CATALOG_S3_PATH__STYLE__ACCESS: "true"
+      
+      # JDBC configuration for metadata
+      CATALOG_JDBC_USER: iceberg
+      CATALOG_JDBC_PASSWORD: iceberg123
+      CATALOG_JDBC_DRIVER: org.postgresql.Driver
+      CATALOG_URI: jdbc:postgresql://postgres:5432/iceberg_catalog
+      
+      # AWS/S3 region configuration
+      AWS_REGION: us-east-1
+      CATALOG_S3_REGION: us-east-1
+      
+      # Optional: OAuth settings (if needed)
+      # CATALOG_OAUTH2_SERVER__URI: http://your-oauth-server
     ports:
       - "8181:8181"
-    environment:
-      - CATALOG_WAREHOUSE=s3://warehouse/wh/
-      - CATALOG_IO__IMPL=org.apache.iceberg.aws.s3.S3FileIO
-      - CATALOG_S3_ENDPOINT=http://minio:9000
-      - CATALOG_S3_ACCESS_KEY_ID=admin
-      - CATALOG_S3_SECRET_ACCESS_KEY=password
-      - CATALOG_S3_PATH_STYLE_ACCESS=true
-      - CATALOG_S3_REGION=us-east-1
-      - CATALOG_S3_USE_INSTANCE_CREDENTIALS=false
-      - AWS_REGION=us-east-1
-      - AWS_ACCESS_KEY_ID=admin
-      - AWS_SECRET_ACCESS_KEY=password
-      - JAVA_OPTS=-Djava.net.preferIPv4Stack=true -Djava.net.useSystemProxies=false
-    depends_on:
-      minio:
-        condition: service_healthy
     networks:
-      - iceberg-network
-    dns:
-      - 8.8.8.8
-      - 8.8.4.4
-    healthcheck:
-      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8181/v1/config"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
-
-
-networks:
-  iceberg-network:
-    driver: bridge
+      - iceberg-net
 
 volumes:
+  postgres-data:
   minio-data:
 
+networks:
+  iceberg-net:
+    driver: bridge
