--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
-version: '3.8'
+# Docker Compose for LangChain Iceberg
+# Supports both REST Catalog and Hive Metastore
+# Usage:
+#   docker-compose up -d                    # Start REST catalog (default)
+#   docker-compose --profile hive up -d      # Start Hive metastore
+#   docker-compose --profile all up -d       # Start both
 
 services:
-  # PostgreSQL database for catalog metadata
-  postgres:
+  # ============================================
+  # REST CATALOG SERVICES (Default)
+  # ============================================
+  
+  # PostgreSQL database for REST catalog metadata
+  postgres-rest:
     image: postgres:15
     container_name: iceberg-postgres
+    profiles:
+      - rest
+      - all
     environment:
       POSTGRES_USER: iceberg
       POSTGRES_PASSWORD: iceberg123
@@ -12,14 +24,22 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-rest-data:/var/lib/postgresql/data
     networks:
       - iceberg-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U iceberg"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   # MinIO for S3-compatible object storage
   minio:
     image: minio/minio
     container_name: iceberg-minio
+    profiles:
+      - rest
+      - all
     environment:
       MINIO_ROOT_USER: admin
       MINIO_ROOT_PASSWORD: password
@@ -31,18 +51,27 @@ services:
       - minio-data:/data
     networks:
       - iceberg-net
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep minio || exit 1"]
+      interval: 30s
+      timeout: 20s
+      retries: 3
 
   # Create MinIO bucket
   minio-setup:
     image: minio/mc
     container_name: minio-setup
+    profiles:
+      - rest
+      - all
     depends_on:
-      - minio
+      minio:
+        condition: service_healthy
     entrypoint: >
       /bin/sh -c "
       sleep 5;
       /usr/bin/mc config host add minio http://minio:9000 admin password;
-      /usr/bin/mc mb minio/warehouse;
+      /usr/bin/mc mb minio/warehouse || true;
       /usr/bin/mc policy set public minio/warehouse;
       exit 0;
       "
@@ -53,9 +82,14 @@ services:
   iceberg-rest:
     image: tabulario/iceberg-rest:latest
     container_name: iceberg-rest-catalog
+    profiles:
+      - rest
+      - all
     depends_on:
-      - postgres
-      - minio
+      postgres-rest:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
     environment:
       # Catalog configuration
       CATALOG_WAREHOUSE: s3://warehouse/
@@ -69,23 +103,83 @@ services:
       CATALOG_JDBC_USER: iceberg
       CATALOG_JDBC_PASSWORD: iceberg123
       CATALOG_JDBC_DRIVER: org.postgresql.Driver
-      CATALOG_URI: jdbc:postgresql://postgres:5432/iceberg_catalog
+      CATALOG_URI: jdbc:postgresql://postgres-rest:5432/iceberg_catalog
       
       # AWS/S3 region configuration
       AWS_REGION: us-east-1
       CATALOG_S3_REGION: us-east-1
-      
-      # Optional: OAuth settings (if needed)
-      # CATALOG_OAUTH2_SERVER__URI: http://your-oauth-server
     ports:
       - "8181:8181"
     networks:
       - iceberg-net
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8181/v1/config || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
+
+  # ============================================
+  # HIVE METASTORE SERVICES
+  # ============================================
+  
+  # PostgreSQL for Hive Metastore database
+  postgres-hive:
+    image: postgres:13
+    container_name: hive-postgres
+    profiles:
+      - hive
+      - all
+    environment:
+      POSTGRES_USER: hive
+      POSTGRES_PASSWORD: hive
+      POSTGRES_DB: metastore
+      POSTGRES_INITDB_ARGS: "--auth-host=md5"
+    ports:
+      - "5433:5432"  # Different port to avoid conflict with REST catalog
+    volumes:
+      - postgres-hive-data:/var/lib/postgresql/data
+    networks:
+      - hive-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U hive"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Hive Metastore
+  hive-metastore:
+    image: apache/hive:3.1.3
+    container_name: hive-metastore
+    profiles:
+      - hive
+      - all
+    depends_on:
+      postgres-hive:
+        condition: service_healthy
+    environment:
+      SERVICE_NAME: metastore
+      DB_DRIVER: postgres
+      IS_RESUME: "true"  # Skip schema init - we'll do it manually
+      SERVICE_OPTS: "-Djavax.jdo.option.ConnectionDriverName=org.postgresql.Driver -Djavax.jdo.option.ConnectionURL=jdbc:postgresql://postgres-hive:5432/metastore -Djavax.jdo.option.ConnectionUserName=hive -Djavax.jdo.option.ConnectionPassword=hive"
+    ports:
+      - "9083:9083"
+    networks:
+      - hive-network
+    healthcheck:
+      test: ["CMD", "netstat", "-an", "|", "grep", "9083"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 120s
 
 volumes:
-  postgres-data:
+  postgres-rest-data:
+  postgres-hive-data:
   minio-data:
 
 networks:
   iceberg-net:
+    driver: bridge
+  hive-network:
     driver: bridge
